# vurl

./: AGENTS.md  Makefile  README.md
docs/: architecture.md  backend-api.md  dev.md  doc-maintenance.md  frontend-ui.md  index.md  memo.md  spec-backend.md  spec-frontend.md  spec-layout.md  spec-yaml.md  spec.md  task.md  task1.md  yaml-authoring-guide.md  yaml-spec.md
sample/: README.md
sample/defs/project-1/environments/: auth.yaml  local.yaml  stg.yaml
sample/defs/project-1/requests/: create-user.yaml  get-user.yaml  search-users.yaml
src/backend/: Cargo.toml  Makefile  README.md
src/backend/src/: lib.rs  main.rs
src/backend/src/app/: mod.rs
src/backend/src/cli/: mod.rs
src/backend/src/config/: paths.rs
src/backend/src/domain/: api.rs  auth.rs  environment.rs  http.rs  mod.rs  project.rs  request.rs
src/backend/src/errors/: mod.rs
src/backend/src/handlers/: api.rs  api_types.rs  frontend.rs  mod.rs
src/backend/src/logging/: mod.rs
src/backend/src/models/: runtime.rs
src/backend/src/process/: supervisor.rs
src/backend/src/runtime/: store.rs
src/backend/src/services/: auth.rs  http.rs  logging.rs  mod.rs  request_execution.rs  resolver.rs
src/backend/src/state/: app_state.rs
src/backend/tests/: api_read.rs  api_send.rs  send_flow.rs
src/backend/tests/support/: mod.rs
src/frontend/: .env.example  Makefile  README.md  eslint.config.js  index.html  package.json  prettier.config.mjs  vite.config.ts  vitest.config.ts
src/frontend/src/: main.tsx
src/frontend/src/api/: client.ts
src/frontend/src/app/: App.scss  App.tsx
(+24 files in other folders)
