[package]
name = "vurl-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vurl-backend"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"
